--- a/app/src/main/res/layout/act_chat.xml
+++ b/app/src/main/res/layout/act_chat.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/text_color"
-    tools:context=".ChatActivity">
+    tools:context=".java.ChatActivity">
 
     <EditText
         android:id="@+id/edit_chat"
