--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,10 +4,10 @@
 
     <item android:id="@+id/contacts"
         android:title="@string/contacts"
-        app:showAsAction="always"/>
+        app:showAsAction="collapseActionView"/>
 
     <item android:id="@+id/logut"
     android:title="@string/logout"
-    app:showAsAction="always"/>
+    app:showAsAction="collapseActionView"/>
 
 </menu>
